[gd_scene load_steps=18 format=2]

[ext_resource path="res://level/Flower.gd" type="Script" id=1]
[ext_resource path="res://level/flower_weapon.png" type="Texture" id=2]
[ext_resource path="res://gui/flower_prog_back.png" type="Texture" id=3]
[ext_resource path="res://gui/flower_prog_fore.png" type="Texture" id=4]
[ext_resource path="res://level/flower_normal.png" type="Texture" id=5]
[ext_resource path="res://level/flower_super.png" type="Texture" id=6]
[ext_resource path="res://level/indicator_super.png" type="Texture" id=7]
[ext_resource path="res://level/indicator_normal.png" type="Texture" id=8]
[ext_resource path="res://level/indicator_weapon.png" type="Texture" id=9]
[ext_resource path="res://level/flower_weapon_shadow.png" type="Texture" id=10]
[ext_resource path="res://level/flower_stem.png" type="Texture" id=11]
[ext_resource path="res://level/flower_super_shadow.png" type="Texture" id=12]
[ext_resource path="res://level/flower_normal_shadow.png" type="Texture" id=13]

[sub_resource type="CircleShape2D" id=4]
radius = 48.0

[sub_resource type="CircleShape2D" id=6]
radius = 40.0

[sub_resource type="CircleShape2D" id=2]
radius = 144.0

[sub_resource type="Animation" id=3]
resource_name = "grow"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Flower/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flower/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flower/Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flower/Shadow:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flower/Stem:value")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Flower:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Flower" type="Area2D" groups=["flowers"]]
collision_layer = 8
collision_mask = 16
script = ExtResource( 1 )

[node name="Normal" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="Shadow" type="Sprite" parent="Normal"]
position = Vector2( 4, 64 )
z_index = -1
texture = ExtResource( 13 )

[node name="Stem" type="TextureProgress" parent="Normal"]
margin_left = -8.0
margin_right = 32.0
margin_bottom = 64.0
value = 100.0
texture_progress = ExtResource( 11 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Normal"]
texture = ExtResource( 5 )

[node name="Indicator" type="Sprite" parent="Normal"]
texture = ExtResource( 8 )

[node name="Super" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 64, -56, 88, 8, 80, 48, 8, 72, -80, 56, -80, -32, -64, -56, -32, -72, 16, -72 )
disabled = true

[node name="Shadow" type="Sprite" parent="Super"]
position = Vector2( 4, 64 )
z_index = -1
texture = ExtResource( 12 )

[node name="Stem" type="TextureProgress" parent="Super"]
margin_left = -8.0
margin_right = 32.0
margin_bottom = 64.0
value = 100.0
texture_progress = ExtResource( 11 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Super"]
texture = ExtResource( 6 )

[node name="Indicator" type="Sprite" parent="Super"]
texture = ExtResource( 7 )

[node name="Weapon" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="Shadow" type="Sprite" parent="Weapon"]
position = Vector2( 4, 64 )
z_index = -1
texture = ExtResource( 10 )

[node name="Stem" type="TextureProgress" parent="Weapon"]
margin_left = -8.0
margin_right = 32.0
margin_bottom = 64.0
value = 100.0
texture_progress = ExtResource( 11 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Weapon"]
texture = ExtResource( 2 )

[node name="Indicator" type="Sprite" parent="Weapon"]
visible = false
texture = ExtResource( 9 )

[node name="Exclusion" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exclusion"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/grow = SubResource( 3 )

[node name="Progress1" type="TextureProgress" parent="."]
visible = false
margin_top = -40.0
margin_right = 45.0
margin_bottom = -20.0
rect_scale = Vector2( -1, 1 )
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 1, 0.913725, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress2" type="TextureProgress" parent="."]
visible = false
margin_top = -40.0
margin_right = 45.0
margin_bottom = -20.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0, 0.929412, 1, 1 )

[connection signal="area_entered" from="." to="." method="_on_Flower_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Flower_area_exited"]
[connection signal="timeout" from="Timer" to="." method="tick"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
